@@ -1,3 +1,11 @@
+Changes since 4.0 Beta 2
+-------------------
+
+* [HTTPASYNC-25] AsyncSchemeRegistry instance set in the execution context takes precedence over
+  the default one.
+  Contributed by Daniel Kulp <dkulp at apache.org> 
+
+
 Release 4.0 Beta 2
 -------------------
 
